<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_story"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.dashboard.newstory.NewStoryFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/navi"
        app:layout_collapseMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_new_story"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="777dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/cd_preview"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="434dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/title_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/preview_image"
            app:layout_constraintStart_toStartOf="@+id/preview_image"
            app:layout_constraintTop_toBottomOf="@+id/preview_image"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tv_uploading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uploading"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/description_edit_text"
            app:layout_constraintStart_toStartOf="@+id/description_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/description_edit_text">

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_baseline_image_search_24"
                android:text="@string/gallery"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_baseline_camera_24"
                android:text="@string/camera"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <Button
            android:id="@+id/upload_story"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:enabled="false"
            android:text="@string/upload_story"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/shareloc"
            app:layout_constraintStart_toStartOf="@+id/shareloc"
            app:layout_constraintTop_toBottomOf="@+id/shareloc" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/shareloc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@string/shareloc"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>